Ver change to v11 stable.

--- a/dada/extras/documentation/pod_source/install_dada_mail_cl.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail_cl.pod
@@ -25,9 +25,9 @@ Copy the distribution to the directory you would like to install Dada Mail under
 Uncompress Dada Mail - this will create a new directory named C<dada>.
 Change into this directory:
 
-    gunzip dada-11_0_0-alpha1.tar.gz
-    tar -xvf dada-11_0_0-alpha1.tar
-    cd dada
+    gunzip dada-11_0_0.tar.gz
+    tar -xvf dada-11_0_0.tar
+	cd dada
 
 In the C<dada> directory, rename the, C<installer-disabled> directory to simply, C<install> and change into this directory. 
 Once in the C<installer> directory, change the permissions of the C<install.cgi> script to, C<755>: 
