--- a/dada/extras/documentation/pod_source/install_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail.pod
@@ -41,8 +41,8 @@ Let's go!
 		<a 
 			class="button success expand" 
 			target="_blank"
-			href="https://sourceforge.net/projects/dadamail/files/dada-11_0_0-alpha1.tar.gz/download">
-	        Download Dada Mail, v11.0.0 Alpha
+			href="https://sourceforge.net/projects/dadamail/files/dada-11_0_0.tar.gz/download">
+	        Download Dada Mail, v11.0.0
 		</a> 
 
 		<p>
@@ -67,11 +67,11 @@ Let's go!
 
 =end html 
 
-I<When installing Pro Dada, use B<I<pro_>dada-11_0_0-alpha1.tar.gz> as the name of the distribution in these directions.>
+I<When installing Pro Dada, use B<I<pro_>dada-11_0_0.v11_0_0-stable_2018_05_21> as the name of the distribution in these directions.>
 
 =head3 Upload the Dada Mail distribution
 
-Once you have downloaded the Dada Mail distribution ( C<dada-11_0_0-alpha1.tar.gz>), upload it to your hosting account. 
+Once you have downloaded the Dada Mail distribution ( C<dada-11_0_0.tar.gz>v11_0_0-stable_2018_05_21oad it to your hosting account. 
 
 =begin html
 
@@ -104,7 +104,7 @@ Download using the link below - it's a small CGI Perl script - so you will want 
 <a 
 	class="button success expand" 
 	target="_blank"
-	href="https://raw.github.com/justingit/dada-mail/v11_0_0-alpha1_2018_05_17/uncompress_dada.cgi"
+	href="https://raw.github.com/justingit/dada-mail/v11_0_0-stable_2018_05v11_0_0-stable_2018_05_21compress_dada.cgi"
 >
 	uncompress_dada.cgi for v10.0.0 Alpha (Save Page/Link As...)
 </a>
@@ -113,11 +113,11 @@ Download using the link below - it's a small CGI Perl script - so you will want 
 
 and upload the C<uncompress_dada.cgi> script (PlainTest/ASCII mode - NOT binary!) to the same directory in your hosting account that you just uploaded, I<dada-11_0_0.tar.gz>. 
 
-=head3 Change the file permissions of the helper script to, "755"
+=hev11_0_0-stable_2018_05_21ange the file permissions of the helper script to, "755"
 
 =head3 Visit the helper script in your web browser
 
-Visiting the C<uncompress_dada.cgi> script should attempt to uncompress the I<dada-11_0_0.tar.gz> distro, change the necessary permissions of various files and prep the actual installer for you to use. 
+Visiting the C<uncompress_dada.cgi> script should attempt to uncompress the I<dada-11_0_0.tar.gz> distrov11_0_0-stable_2018_05_21ge the necessary permissions of various files and prep the actual installer for you to use. 
 
 Once it's finished running, 
 you should be presented with a link to use the actual installer. 
@@ -131,9 +131,7 @@ B<Continue Installing and Configuring Dada Mail!> to continue.
 
 <p>See, <a href="./FAQ-install_upgrade.pod.html#prepping_dada_mail_manually">Prepping Dada Mail Manually</a> if this doesn't happen and you get a message in your browser window, sort of like this: </p>
 
-<pre>Can't find dada-11_0_0-alpha1.tar to uncompress!
-
- You may have to uncompress and prep Dada Mail manually.</pre> 
+<pre>Can't find dada-11_0_0.tar to uncomprv11_0_0-stable_2018_05_21 You may have to uncompress and prep Dada Mail manually.</pre> 
 
 </div>
 
